app/javascript/stylesheets/_forms.scss
// Forms SCSS //

.form-grand-parent  {
  display:table;
  height:100%;
  margin: 30% auto;
  .form-parent {
    display:table-cell;
    vertical-align:middle;
  }
}
.devise-form {
  text-align: center;
  width: 350px;
  border: 1.5px solid #00000042;
  background: #636363db;
  box-shadow: 4px 4px 8px #9bc7ca87;
  border-radius: 8px;
  margin: 0 auto;
  .form-header {
    border-bottom: 1.5px solid #00000021;
    background: #6363636b;
    border-top-left-radius: inherit;
    border-top-right-radius: inherit;
    h2 {
      font-size: 1rem;
      color: #ecececde;
      padding: 12px 0;
      font-family: sans-serif;
      margin: 0;
    }
    .close {
      position: absolute;
      right: 12px;
      top: 6px;
    }
  }
  .form-content {
    margin: 8px auto;
    p {
      color: #f3f3f3b3;
      font-size: 0.8rem;
      padding: 0 8px 0 8px;
    }
    select {
      width: 100%;
      color: #ffffffc9;
    }
    .actions {
      margin: 16px auto;
      display: inline-grid;
      height: 100%;
      a {
        margin-top: 8px;
        color: #f3f3f3b3;
        font-size: 0.7rem;
      }
      a:hover {
        padding: 0px;
        color: white;
        text-decoration: underline;
        transition: all 1s 0s ease-in-out;
      }
      .btn {
        width: 250px;
      }
      input {
        width: 250px;
      }
    }
  }
}

.field {
  margin: 16px auto;
  display: flex;
  width: 250px;
  border: 1px solid #00000021;
  border-radius: 4px;
  background: #0000002b;
  justify-content: space-between;
  box-shadow: 1px 1px 7px inset #31313194;
  input {
    border: none;
    background-color: unset;
    color: #ecececde;
    width: 90%;
    padding-left: 8px;
  }
  input:focus {
    outline: none;
    box-shadow: none;
  }
  .fa {
    color: #ecececde;
    background-color: unset;
    align-self: center;
    padding-left: 8px;
  }
}
.focused {
  border-color: rgba(11, 41, 14, 0.21);
  box-shadow: 0 1px 1px rgba(212, 212, 212, 0.34) inset, 0 0 8px #bfcebc;
  outline: 0 none;
  background-color: #208c1b14;
}

input[type=number]::-webkit-inner-spin-button,
input[type=number]::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.modal-backdrop {
  background: rgb(42,82,119);
  background: -webkit-linear-gradient(bottom, rgba(42,82,119,0.9179487179487179) 0%, rgba(83,115,157,1) 51%, rgba(26,32,56,0.982051282051282) 100%, rgba(86,55,173,1) 100%);
  background: -o-linear-gradient(bottom, rgba(42,82,119,0.9179487179487179) 0%, rgba(83,115,157,1) 51%, rgba(26,32,56,0.982051282051282) 100%, rgba(86,55,173,1) 100%);
  background: linear-gradient(to top, rgba(42,82,119,0.9179487179487179) 0%, rgba(83,115,157,1) 51%, rgba(26,32,56,0.982051282051282) 100%, rgba(86,55,173,1) 100%);
  }
.modal-backdrop.show {
  opacity: 0.9;
  filter: blur(12px)
}

